refactor(#11): Aplicação de responsividade na Interface Login Cliente

--- a/src/views/login-entregador.css
+++ b/src/views/login-entregador.css
@@ -126,7 +126,7 @@
     gap: 1rem;
     background: var(--dark-color);
     align-items: center;
-    border-radius: 5%;
+    border-radius: 20px;
 }
 
 .text-agroup h2 {
