--- a/src/views/login-user.css
+++ b/src/views/login-user.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
 
 :root{
     --main-color: #8856f6;
@@ -49,6 +51,7 @@
     justify-content: center;
     flex:auto;
     font-family: 'Poppins', sans-serif;
+    padding: 2%;
 }
 
 
@@ -80,13 +83,6 @@
 }
 
 
-
-
-
-
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
-
-
 .title{
     font-size: 1.5rem;
     font-weight: bold;
@@ -96,7 +92,7 @@
 .input-agroupt{
    border-radius: 30px;
    padding: 10px;
-   width: 200px;
+   width: 250px;
    border: 1px solid var(--main-color);
 }
 
@@ -129,3 +125,37 @@
     font-family: 'Poppins';
     color: var(--dark-color);
 }
+
+@media screen and (max-width: 1024px) {
+    .text-agroup{
+        width: 90%;
+    }
+    .login-right{
+        padding: 5%;
+    }
+    .login-content{
+        width: 100vw;
+        height: 100vh
+    }
+  }
+
+  @media screen and (max-width: 700px) {
+    .login-content{
+        width: 100vw;
+        height: 100vh;
+        flex-direction: column;
+    }
+
+    .login-left{
+        display: none;
+    }
+
+    .input-agroupt{
+        border-radius: 30px;
+        padding: 10px;
+        width: 250px;
+        border: 1px solid var(--main-color);
+     }
+     
+
+  }
