--- a/src/views/login-entregador.css
+++ b/src/views/login-entregador.css
@@ -50,7 +50,7 @@
     flex:auto;
     font-family: 'Poppins', sans-serif;
 }
-.img_entregador{
+.img_login{
     display: flex;
     flex-direction: column;
     width: 250px;
@@ -124,9 +124,8 @@
     flex-direction: column;
     width: 400px;
     gap: 1rem;
-    background: var(--dark-color);
     align-items: center;
-    border-radius: 20px;
+    border-radius: 6px;
 }
 
 .text-agroup h2 {
@@ -148,3 +147,51 @@
     text-decoration: none;
     color: var(--white-color);
 }
+
+
+.login-right img{
+    width: 100px;
+    height: 100px;
+    display: none;
+}
+
+@media screen and (max-width: 1024px) {
+    .text-agroup{
+        width: 90%;
+    }
+    .login-right{
+        padding: 5%;
+    }
+    .login-content{
+        width: 100vw;
+        height: 100vh
+    }
+  }
+
+  @media screen and (max-width: 700px) {
+    .login-content{
+        width: 100vw;
+        height: 100vh;
+        flex-direction: column;
+    }
+
+    .login-left{
+        display: none;
+    }
+
+    .input-agroupt{
+        border-radius: 30px;
+        padding: 10px;
+        width: 250px;
+        border: 1px solid var(--main-color);
+     }
+     
+     .login-right img{
+        display: block;
+        background-color: var(--main-color) ;
+        border-radius: 50%;
+        padding: 10px;
+     }
+
+  }
+
