feat(#19): Criação da Feature de Histórico de Pedidos do Cliente

--- a/src/views/cliente-home.css
+++ b/src/views/cliente-home.css
@@ -8,6 +8,8 @@
     --subsec-color: #210a58;
     --dark-color: #040824;
     --white-color: #ffffff;
+    --gray-color:#878787;
+    
 }
 
 
@@ -180,6 +182,10 @@
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.search-button svg{
+    fill: #fff;
 }
 
 .action-button{
