--- a/src/views/carrinho.css
+++ b/src/views/carrinho.css
@@ -1,10 +1,10 @@
 .side-cart{
     background-color:var(--dark-color);
-    height: 100%;
+    height: 100vh;
     width: 350px;
     position: fixed;
     z-index: 900;
-    top:0;
+    top: 0;
     right:0;
     color: var(--white-color);
     font-family: 'Roboto';
@@ -12,6 +12,7 @@
     display: flex;
     gap: 10px;
     flex-direction: column;
+
 }
 
 .carrinho-list{
