--- a/src/views/register.css
+++ b/src/views/register.css
@@ -20,16 +20,18 @@
     justify-content: center;
     width: 100vw;
     height: 100vh;
-    background-color: var(--dark-color);
+    background-color: var(--sec-color);
 }
 
-.login-content{
-    width: 70%;
-    height: 500px;
+.register-content {
+    width: 75%;
+    height: 550px;
     display: flex;
     overflow: hidden;
+    border-radius: 20px;
+    border: 2px solid var(--white-color);
 }
-.login-left{
+.register-left{
     flex:auto;
     height: 100%;
     background-color: var(--main-color);
@@ -39,14 +41,14 @@
     flex-direction: column;
 }
 
-.login-left h2{
+.register-left h2{
     font-weight: bold;
     font-family: 'Roboto', sans-serif;
-    color: #fff;
+    color: var(--white-color);
 }
-.login-right{
+.register-right{
     height: 100%;
-    background-color: var(--white-color);
+    background-color: var(--dark-color);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -55,7 +57,7 @@
     padding: 2%;
 }
 
-.login-right form{
+.register-right form{
     display: flex;
     gap: 1rem;
     flex-direction: column;
@@ -63,7 +65,7 @@
     color: #fff;
 }
 
-.login-right input[type="submit"]{
+.register-right input[type="submit"]{
     width: 150px;
     padding: 10px;
     font-family: 'Poppins';
@@ -77,7 +79,7 @@
 }
 
 
-.login-right input[type="submit"]:hover{
+.register-right input[type="submit"]:hover{
   box-shadow: 1px 1px 6px  var(--main-color);
   
 }
@@ -85,7 +87,7 @@
 .title{
     font-size: 1.5rem;
     font-weight: bold;
-    color: var(--main-color);
+    color: var(--white-color);
 }
 
 .input-agroupt{
@@ -105,15 +107,15 @@
     border: 0;
     background: none;
     outline: 0;
-    color: var(--main-color);
+    color: var(--white-color);
 }
-.login-right img{
+.register-right img{
     width: 100px;
     height: 100px;
     display: none;
 }
 .input-agroupt input::-webkit-input-placeholder{
-    color: var(--main-color);
+    color: var(--white-color);
 }
 
 .text-agroup{
@@ -127,9 +129,10 @@
     text-align: center;
     font-family: 'Poppins';
     color: var(--white-color);
+    font-weight:bold;
 }
 
-.img_login{
+.img_register{
     display: flex;
     flex-direction: column;
     width: 320px;
@@ -137,7 +140,7 @@
 }
 
 .forget a{
-    color: var(--sec-color);
+    color: var(--white-color);
     text-decoration: none;
     font-size: 0.9rem;
 }
@@ -149,7 +152,7 @@
 }
 
 .register a{
-    color: var(--sec-color);
+    color: var(--white-color);
     text-decoration: none;
     font-size: 1rem;
 }
@@ -165,23 +168,23 @@
     .text-agroup{
         width: 90%;
     }
-    .login-right{
+    .register-right{
         padding: 5%;
     }
-    .login-content{
+    .register-content{
         width: 100vw;
         height: 100vh
     }
   }
 
   @media screen and (max-width: 700px) {
-    .login-content{
+    .register-content{
         width: 100vw;
         height: 100vh;
         flex-direction: column;
     }
 
-    .login-left{
+    .register-left{
         display: none;
     }
 
@@ -192,7 +195,7 @@
         border: 1px solid var(--main-color);
      }
      
-     .login-right img{
+     .register-right img{
         width: 60%;
         height: 10rem;
         display: block;
