--- a/src/views/register.css
+++ b/src/views/register.css
@@ -20,21 +20,20 @@
     justify-content: center;
     width: 100vw;
     height: 100vh;
-    background-color: var(--sec-color);
+   
 }
 
 .register-content {
-    width: 75%;
-    height: 550px;
+    width: 100%;
+    height: 100%;
     display: flex;
     overflow: hidden;
-    border-radius: 20px;
-    border: 2px solid var(--white-color);
 }
 .register-left{
     flex:auto;
     height: 100%;
-    background-color: var(--main-color);
+    background: rgb(56,26,122);
+    background: linear-gradient(90deg, rgba(56,26,122,1) 0%, rgba(136,86,246,1) 100%);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -48,13 +47,15 @@
 }
 .register-right{
     height: 100%;
-    background-color: var(--dark-color);
+    background-color: var(--white-color);
     display: flex;
     align-items: center;
     justify-content: center;
     flex:auto;
     font-family: 'Poppins', sans-serif;
     padding: 2%;
+    position: relative;
+    overflow: hidden;
 }
 
 .register-right form{
@@ -62,7 +63,8 @@
     gap: 1rem;
     flex-direction: column;
     align-items: center;
-    color: #fff;
+    color: var(--main-color);
+    z-index: 2;
 }
 
 .register-right input[type="submit"]{
@@ -71,7 +73,7 @@
     font-family: 'Poppins';
     background: rgb(136,86,246);
     background: linear-gradient(90deg, rgba(136,86,246,1) 0%, rgba(52,0,166,1) 50%);
-    border-radius: 30px;
+    border-radius: 10px;
     border: 0;
     color: #fff;
     cursor: pointer;
@@ -87,13 +89,13 @@
 .title{
     font-size: 1.5rem;
     font-weight: bold;
-    color: var(--white-color);
+    color: var(--main-color);
 }
 
 .input-agroupt{
-   border-radius: 30px;
+    border-radius: 10px;
    padding: 10px;
-   width: 250px;
+   width: 300px;
    border: 1px solid var(--main-color);
 }
 
@@ -107,7 +109,7 @@
     border: 0;
     background: none;
     outline: 0;
-    color: var(--white-color);
+    color: var(--main-color);
 }
 .register-right img{
     width: 100px;
@@ -115,7 +117,7 @@
     display: none;
 }
 .input-agroupt input::-webkit-input-placeholder{
-    color: var(--white-color);
+    color: var(--main-color);
 }
 
 .text-agroup{
@@ -123,13 +125,11 @@
     flex-direction: column;
     width: 400px;
     gap: 1rem;
-    text-align: center;
+    text-align: left;
 }
 .text-agroup p{
-    text-align: center;
     font-family: 'Poppins';
-    color: var(--white-color);
-    font-weight:bold;
+    color: var(--white-color)
 }
 
 .img_register{
@@ -140,7 +140,7 @@
 }
 
 .forget a{
-    color: var(--white-color);
+    color: var(--main-color);
     text-decoration: none;
     font-size: 0.9rem;
 }
@@ -152,7 +152,7 @@
 }
 
 .register a{
-    color: var(--white-color);
+    color: var(--main-color);
     text-decoration: none;
     font-size: 1rem;
 }
@@ -162,6 +162,34 @@
     text-decoration: none;
     font-size: 1rem;
 }
+
+.background-circle1{
+    position: absolute;
+    height: 250px;
+    width: 250px;
+    bottom: 0;
+    text-align: center;
+    background-color: var(--main-color);
+    border-radius: 50%;
+    top: -50px;
+    right: -50px;
+    z-index: 1;
+}
+
+.background-circle2{
+    position: absolute;
+    height: 200px;
+    width: 200px;
+    bottom: 0;
+    text-align: center;
+    background-color: var(--main-color);
+    border-radius: 50%;
+    bottom: -50px;
+    left: -50px;
+    z-index: 1;
+}
+
+
 
 
 @media screen and (max-width: 1024px) {
@@ -204,4 +232,19 @@
         padding: none;
      }
 
+  }
+
+  @media screen and (max-width: 555px){
+    .background-circle1{
+       width: 200px;
+       height: 200px;
+       top: -100px;
+       right: -100px;
+    }
+
+    .login-right img{
+      
+        background-color: none;
+       
+     }
   }
