--- a/src/views/cliente-home.css
+++ b/src/views/cliente-home.css
@@ -1,18 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
-:root{
+:root {
     --main-color: #8856f6;
     --sub-color: #7234fa;
     --sec-color: #2a1067;
     --subsec-color: #210a58;
     --dark-color: #040824;
     --white-color: #ffffff;
-    --gray-color:#878787;
+    --gray-color: #878787;
     --red-color: #fc0352;
 }
 
-.close-btn{
+.close-btn {
     width: 30px;
     height: 30px;
     position: absolute;
@@ -27,37 +27,36 @@
     cursor: pointer;
 }
 
-.close-btn:hover{
+.close-btn:hover {
     background: var(--red-color);
     color: var(--white-color);
 }
 
-*{
+* {
     padding: 0;
     margin: 0;
 }
 
-.preco{
-    background-color:var(--sub-color);
+.preco {
+    background-color: var(--sub-color);
     padding: 0.2rem;
     border-radius: 6px;
     width: 100px;
-    text-align:center;
-    color:#fff;
+    text-align: center;
+    color: #fff;
 }
-.container{
-   flex: 1; 
-   height: 100vh;
-   padding: 1rem;
-   display: flex;
-   align-items: center;
-   flex-direction: column;
-   font-family: 'Poppins';
-   gap: 1rem;
+
+.container {
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    font-family: 'Poppins';
+    gap: 1rem;
 }
 
 
-.topbar{
+.topbar {
     height: 60px;
     display: flex;
     align-items: center;
@@ -68,7 +67,7 @@
     background-color: var(--white-color);
 }
 
-.topbar .user-perfil{
+.topbar .user-perfil {
     background: var(--main-color);
     width: 40px;
     height: 40px;
@@ -76,10 +75,11 @@
     overflow: hidden;
 }
 
-.topbar .user-perfil img{
+.topbar .user-perfil img {
     width: 100%;
 }
-.topbar .notificacao{
+
+.topbar .notificacao {
     background: var(--main-color);
     width: 40px;
     height: 40px;
@@ -87,48 +87,94 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    position: relative;
 }
 
-.notificacao svg{
+.notificacao svg {
     fill: #ffffff;
 }
 
-.section{
+.section {
     width: 80%;
     display: flex;
     flex-direction: column;
-    gap: 1rem;
-    
+    gap: 1rem;   
+    position: relative;
+    padding-bottom: 1rem;
 }
 
 
-.section-title{
+.section-title {
     color: var(--sec-color);
     font-size: 1rem;
 }
 
-.product-list{
+.left-btn{
+    background-color: var(--main-color);
+    border-radius: 50%;
+    background: #8856f6;
+    color: var(--white-color);
     display: flex;
-    gap: 2rem;
-    flex-wrap: wrap;
-    width: 100%;
+    width: 40px;
+    height: 40px;
+    z-index: 200;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+}
+.right-btn{
+    background-color: var(--main-color);
+    border-radius: 50%;
+    background: #8856f6;
+    color: var(--white-color);
+    display: flex;
+    width: 40px;
+    height: 40px;
+    z-index: 200;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+}
+.product-list{
+   display: flex;
+   width: 90%;
+   overflow: hidden;
+   gap: 1rem;
+   padding: 1rem;
 }
 
-.categoria-list{
+.carousel-produtos{
+    display: flex;
+    align-items:center;
+    justify-content: space-between;
+    
+}
+
+.product-list::-webkit-scrollbar {
+    display: none;
+  }
+
+
+
+.categoria-list {
     display: flex;
     gap: 1rem;
+    
 }
 
-.product-card{
+.product-card {
     display: flex;
     flex-direction: column;
     gap: 1rem;
     align-items: center;
     justify-content: center;
     position: relative;
+    transition: transform 0.5s ease-in;
 }
 
-.categoria-card{
+.categoria-card {
     padding: 0.5rem;
     color: var(--sec-color);
     border-radius: 6px;
@@ -136,43 +182,50 @@
     transition: all 0.5s ease-out;
     cursor: pointer;
     font-size: 0.9rem;
-   
+
 }
 
-.categoria-card:hover{
+.categoria-card:hover {
     background-color: var(--main-color);
     color: var(--white-color);
 }
-.product-card .product-img{
+
+.product-card .product-img {
     width: 100px;
     height: 100px;
     border-radius: 50%;
     display: flex;
     flex-direction: column;
-    
+
 }
 
-.product-card .card-text{
-    background-color: var(--main-color);
+.product-card .card-text {
+    background: rgba(255, 255, 255, 0.15);
+    box-shadow: 0 8px 15px 0 rgba(31, 38, 135, 0.37);
+    backdrop-filter: blur(2.5px);
+    -webkit-backdrop-filter: blur(2.5px);
+    border-radius: 10px;
+    border: 1px solid rgba(255, 255, 255, 0.18);
     display: flex;
     flex-direction: column;
     gap: 0.2rem;
-    color: var(--white-color);
+    color: var(--dark-color);
     align-items: center;
     width: 150px;
     border-radius: 10px;
     padding: 10px 0px;
+    font: 0.8rem;
 }
 
-.card-text .nome{
+.card-text .nome {
     font-weight: bold;
 }
 
-.product-img img{
+.product-img img {
     width: 100%;
 }
 
-.search-input{
+.search-input {
     display: flex;
     border: 1px solid var(--main-color);
     width: 300px;
@@ -184,14 +237,14 @@
     justify-self: flex-end;
 }
 
-.search-input input[type="text"]{
+.search-input input[type="text"] {
     border: 0;
     outline: 0;
     width: 90%;
     margin-left: 10px;
 }
 
-.search-button{
+.search-button {
     height: 100%;
     width: 60px;
     background-color: var(--main-color);
@@ -203,11 +256,11 @@
     justify-content: center;
 }
 
-.search-button svg{
+.search-button svg {
     fill: #fff;
 }
 
-.action-button{
+.action-button {
     position: absolute;
     top: 0;
     right: 5px;
@@ -217,8 +270,8 @@
     gap: 0.2rem;
 }
 
-.action-button button{
-    background-color:#ccc;
+.action-button button {
+    background-color: #ccc;
     border: 0;
     width: 30px;
     height: 30px;
@@ -227,10 +280,107 @@
     transition: all 0.5s ease-out;
 }
 
-.action-button button:hover{
+.action-button button:hover {
     background-color: #fc0352;
 }
-.action-button button svg{
+
+.action-button button svg {
     fill: var(--white-color);
 }
+
+.notificacao-modal {
+    width: 400px;
+    height: 200px;
+    background: rgba( 255, 255, 255, 0.18);
+    box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+    backdrop-filter: blur( 4px );
+    -webkit-backdrop-filter: blur( 4px );
+    border-radius: 10px;
+    border: 1px solid rgba( 255, 255, 255, 0.18 );
+    position: absolute;
+    top: 50px;
+    right: 0px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 0.5rem;
+    padding-top: 0.5rem;
+    z-index: 10;
+}
+
+.notificacao-item {
+    width: 90%;
+    padding: 0.5rem;
+    background-color: var(--main-color);
+    border-radius: 6px;
+    color: #fff;
+    display: flex;
+    gap: 0.5rem;
+    height: 40px;
+}
+
+.notificacao-text {
+    font-size: 0.8rem;
+}
+
+.notificacao-icon {
+    width: 30px;
+    height: 30px;
+    color: var(--main-color);
+    background-color: var(--white-color);
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+
+@media screen and (max-width: 1100px){
+
+    .categoria-list{
+        flex-wrap: wrap;
+    }
+
+ 
+}
+
+
+
+
+@media screen and (max-width: 950px){
+    .section{
+        width: 70%;
+    }
+    .categoria-list{
+        flex-wrap: wrap;
+    }
+
+    .right-btn{
+        right: -5rem;
+    }
+}
+
+
+@media screen and (max-width: 650px){
+    .container{
+       width: 100%;
+       margin-bottom: 300px;
+    }
+
+    .section{
+        width: 90%;
+    }
+    .right-btn{
+        right: 2rem;
+    }
+
+    .search-input{
+        width: 90%;
+    }
+
+}
+
+
+
+
 
