frontend(#16) - Tela finalizada

--- a/src/views/profile.css
+++ b/src/views/profile.css
@@ -1,44 +1,62 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
-:root{
+:root {
     --main-color: #8856f6;
     --sub-color: #7234fa;
     --sec-color: #2a1067;
     --subsec-color: #210a58;
     --dark-color: #040824;
     --white-color: #ffffff;
-    --gray-color:#878787;
-    
+    --gray-color: #878787;
+    --red-color: #fc0352;
 }
 
+.close-btn {
+    width: 30px;
+    height: 30px;
+    position: absolute;
+    top: 0.5rem;
+    right: 0.5rem;
+    color: var(--red-color);
+    border: 1px solid var(--red-color);
+    background: none;
+    font-size: 1rem;
+    border-radius: 10px;
+    transition: all 0.5s ease-out;
+    cursor: pointer;
+}
 
-*{
+.close-btn:hover {
+    background: var(--red-color);
+    color: var(--white-color);
+}
+
+* {
     padding: 0;
     margin: 0;
 }
 
-.preco{
-    background-color:var(--sub-color);
+.preco {
+    background-color: var(--sub-color);
     padding: 0.2rem;
     border-radius: 6px;
     width: 100px;
-    text-align:center;
-    color:#fff;
+    text-align: center;
+    color: #fff;
 }
-.container{
-   flex: 1; 
-   height: 100vh;
-   padding: 1rem;
-   display: flex;
-   align-items: center;
-   flex-direction: column;
-   font-family: 'Poppins';
-   gap: 1rem;
+
+.container {
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    font-family: 'Poppins';
+    gap: 1rem;
 }
 
 
-.topbar{
+.topbar {
     height: 60px;
     display: flex;
     align-items: center;
@@ -49,7 +67,7 @@
     background-color: var(--white-color);
 }
 
-.topbar .user-perfil{
+.topbar .user-perfil {
     background: var(--main-color);
     width: 40px;
     height: 40px;
@@ -57,10 +75,11 @@
     overflow: hidden;
 }
 
-.topbar .user-perfil img{
+.topbar .user-perfil img {
     width: 100%;
 }
-.topbar .notificacao{
+
+.topbar .notificacao {
     background: var(--main-color);
     width: 40px;
     height: 40px;
@@ -68,150 +87,396 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    position: relative;
 }
 
-.notificacao svg{
+.notificacao svg {
     fill: #ffffff;
 }
 
-.section{
-    width: 80%;
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    
-}
-
-
-.section-title{
+.perfil h2{
     color: var(--sec-color);
-    font-size: 1rem;
+    font-size: 1.8rem;
 }
 
-.product-list{
+.user-perfil img{
+  display: flex;;
+    border-radius: 50rem;
+    width: 8rem;
+    margin-left: 1rem;
+    margin-top: 0rem;
+    border: 2px solid var(--main-color);
+}
+
+.user-perfil2 img{
     display: flex;
-    gap: 2rem;
-    flex-wrap: wrap;
-    width: 100%;
+    border-radius: 50rem;
+    width: 2.5rem;
 }
 
-.categoria-list{
-    display: flex;
-    gap: 1rem;
+.container-geral-perfil{
+  background-color: none;
+  width: 50%;
+  display: flex;
+  flex-direction: column;
 }
 
-.product-card{
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    align-items: center;
-    justify-content: center;
-    position: relative;
+.container-perfil{
+  padding-top: 4rem;
+  border: 2px solid var(--main-color);
+  border-radius: 1.5rem;
+  margin: 4px;
+  padding-bottom: 1rem;
 }
 
-.categoria-card{
-    padding: 0.5rem;
-    color: var(--sec-color);
-    border-radius: 6px;
-    border: 1px solid var(--main-color);
-    transition: all 0.5s ease-out;
-    cursor: pointer;
-    font-size: 0.9rem;
-   
+.user-perfil{
+  height: 4.3rem;
+  display: inline-block;
+  position: relative;
 }
 
-.categoria-card:hover{
+.title-perfil{
+  display: flex;
+  align-items: center;
+}
+
+.title-perfil h1{
+  color: var(--dark-color);
+  font-weight: bold;
+  font-size: 1.8rem;
+}
+
+.bx{
+  color:white; 
+  font-size: 25px;
+  margin-right: 0.3rem;
+}
+
+.class{
+  color:white; 
+  font-size: 25px;
+  margin-right: 0.3rem;
+}
+
+.info-perfil p{
+  color: var(--dark-color);
+  font-weight: bold;
+  margin-left: 1rem;
+}
+
+.info-perfil-senha input{
+  color: var(--dark-color);
+  font-weight: bold;
+  border: none;
+  outline: none;
+  align-items: center;
+}
+
+.title-perfil i#edit{
+  color: var(--sec-color);
+  margin-left: 1rem;
+}
+
+.info-perfil-senha i#edit{
+  color: var(--sec-color);
+  margin-left: 1rem;
+}
+
+.info-perfil-email i#edit{
+  color: var(--sec-color);
+  margin-left: 1rem;
+}
+
+.info-perfil-apelido i#edit{
+  color: var(--sec-color);
+  margin-left: 1rem;
+}
+
+.info-perfil-email {
+  display: flex;
+  color: var(--daek-color);
+  font-weight: bold;
+  margin-left: 1rem;
+  align-items: center;
+}
+
+.info-perfil-apelido {
+  display: flex;
+  color: var(--daek-color);
+  font-weight: bold;
+  margin-left: 1rem;
+  align-items: center;
+}
+
+.edit-perfil a{
+  display: flex;
+  text-decoration: none;
+  color: var(--white-color);
+  padding-left: 0.7rem;
+  padding-right: 0.7rem;
+  align-items: center;
+  padding: 0.7rem;
+  background-color: var(--main-color);
+  width: 20%;
+  margin-left: 0.3rem;
+  margin-top: 1rem;
+  border-radius: 2rem;
+}
+
+
+
+.edit-perfil{
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.edit-perfil a:hover{
+  background-color: var(--sec-color);
+  transition-duration: 0.8s;
+}
+.perfil-edit{
+  display: flex;
+  align-items: center
+}
+
+.perfil-edit i{
+  display: flex;
+  color: var(--white-color);
+  margin-left: 1rem;
+}
+
+.perfil-edit i:hover{
+  color: var(--main-color);
+  transition-duration: 0.8s;
+}
+
+.perfil-edit a{
+  text-decoration: none;
+}
+
+.user-perfil a{
+  position: absolute;
+  display: flex;
+  bottom: 0;
+  left: 46%;
+  transform: translateX(-50%);
+  transform: translateY(3.5rem);
+  background-color: none;
+  align-items: center;
+  text-decoration: none;
+  border-radius: 10px;
+}
+.bottons{
+  padding-top: 0;
+}
+
+.endereco-user{
+  background-color: rgb(255, 255, 255);
+  width: 50%;
+  height: 10rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.ender{
+  display: flex;
+  font-size: 1.5rem;
+  margin-top: 0rem;
+  margin-bottom: 0rem;
+  background-color: none;
+  color: var(--dark-color);
+}
+
+.one{
+  display:flex;
+  background-color: var(--white-color);
+  width: 32%;
+  height: 9.5rem;
+  border-radius: 1rem;
+  border: 2px dashed var(--main-color);
+  margin-left: 0.3%;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.two{
+  background-color: var(--white-color);
+  width: 32%;
+  height: 9.5rem;
+  border-radius: 1rem;
+  border: 2px solid var(--main-color);
+  margin-left: 0.3%;
+  display: flex;
+  flex-direction: column;
+}
+
+.tree{
+  background-color: var(--white-color);
+  width: 32%;
+  height: 9.5rem;
+  border-radius: 1rem;
+  border: 2px solid var(--main-color);
+  margin-left: 0.3%;
+  margin-right: 0.3%;
+  display: flex;
+  flex-direction: column;
+}
+
+.one a{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-decoration: none;
+  font-weight: bold;
+  padding: 2.5rem;
+  color: #040824;
+}
+
+.two label{
+  margin-left: 1rem;
+  font-size: 11px;
+}
+
+.two label#title{
+  margin-right: 1rem;
+  margin-left: 0rem;
+  background-color: none;
+  padding: 0.4rem;
+  border-bottom: 2px solid var(--main-color);
+  width: 95.2%;
+  font-weight: bold;
+}
+
+.two a{
+  text-decoration: none;
+  font-size: 12px;
+  margin-left: 1rem;
+  color: rgb(111, 0, 255);
+}
+
+.two a:hover{
+  color: var(--sec-color);
+}
+
+.two label#nome{
+  font-weight: bold;
+}
+
+.tree label{
+  margin-left: 1rem;
+  margin-top: 0.2rem;
+  font-size: 11px;
+}
+
+.tree a{
+  margin-top: 0.8rem;
+  text-decoration: none;
+  font-size: 12px;
+  margin-left: 1rem;
+  color: rgb(111, 0, 255);
+}
+
+.tree label#nome{
+  font-weight: bold;
+}
+
+.container{
+  display: flex;
+  align-items: center;
+}
+
+.user-perfil a i{
+  color:transparent;
+}
+
+@media (max-width: 768px) {
+  .container-geral-perfil{
+      display: flex;
+      width: 100%;
+      margin-left: 0;
+      margin-right: 0;
+      align-items: center;
+      flex-direction: column;
+  }
+
+  .container-perfil{
     background-color: var(--main-color);
     color: var(--white-color);
-}
-.product-card .product-img{
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
+  }
+
+  .title-perfil h1{
+    color: white;
+    font-size: 1.2rem;
+  }
+
+  .edit-perfil a p {
+    display: none;
+  }
+
+  .edit-perfil a{
+    margin-left: 2rem;
+    margin-right: 2rem;
+    padding-left: 1.3rem;
+    padding-right: 1.3rem;
+  }
+
+  .bottons{
+    background-color: none;
     display: flex;
-    flex-direction: column;
-    
-}
+    justify-content:space-around;
+  }
 
-.product-card .card-text{
-    background-color: var(--main-color);
-    display: flex;
-    flex-direction: column;
-    gap: 0.2rem;
-    color: var(--white-color);
-    align-items: center;
-    width: 150px;
-    border-radius: 10px;
-    padding: 10px 0px;
-}
+  .endereco-user{
+      display: flex;
+      padding-left: rem;
+      width: 100%;
+      margin-left: 0;
+      margin-right: 0;
+      align-items: center;
+      flex-direction: column;
+  }
 
-.card-text .nome{
-    font-weight: bold;
-}
-
-.product-img img{
-    width: 100%;
-}
-
-.search-input{
-    display: flex;
-    border: 1px solid var(--main-color);
-    width: 300px;
-    border-radius: 10px;
-    overflow: hidden;
-    position: relative;
-    height: 40px;
-    align-items: center;
-    justify-self: flex-end;
-}
-
-.search-input input[type="text"]{
-    border: 0;
-    outline: 0;
+  .two{
     width: 90%;
-    margin-left: 10px;
-}
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    padding-bottom: 1rem;
+  }
 
-.search-button{
-    height: 100%;
-    width: 60px;
+  .one{
+    width: 90%;
+    margin-top: 0rem;
+    margin-bottom: 1rem;
+  }
+
+  .tree{
+    width: 90%;
+    margin-top: 1rem;
+    padding-bottom: 1rem;
+  }
+
+  .info-perfil-senha input{
     background-color: var(--main-color);
-    position: absolute;
-    top: 0;
-    right: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
+    color: var(--white-color);
+  }
+ 
+  .user-perfil a i:hover{
+    color: var(--white-color);
+  }
 
-.search-button svg{
-    fill: #fff;
-}
+  .perfil-edit a i{
+    color: var(--main-color);
+  }
 
-.action-button{
-    position: absolute;
-    top: 0;
-    right: 5px;
-    z-index: 100;
-    display: flex;
-    flex-direction: column;
-    gap: 0.2rem;
-}
+  .perfil-edit a i:hover{
+    color: var(--white-color);
+  }
 
-.action-button button{
-    background-color:#ccc;
-    border: 0;
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
-    cursor: pointer;
-    transition: all 0.5s ease-out;
-}
+  .container{
+    margin-bottom: 28rem;
+  }
 
-.action-button button:hover{
-    background-color: #fc0352;
 }
-.action-button button svg{
-    fill: var(--white-color);
-}
-
