--- a/src/views/preset.css
+++ b/src/views/preset.css
@@ -9,6 +9,7 @@
 button{
     cursor: pointer;
 }
+
 .neomorphism{
     box-shadow: 20px 20px 60px #bebebe,
         -20px -20px 60px #ffffff;
@@ -65,4 +66,8 @@ button{
     font-size: 1.2rem;
     cursor: pointer;
     transition: all 0.5s ease-out;
+}
+
+input[type="submit"]{
+    cursor: pointer;
 }
