backend: Cadastro de Produtos, Seção e Fornecedores

--- a/src/views/painel-produtos.css
+++ b/src/views/painel-produtos.css
@@ -97,15 +97,9 @@
     color: var(--white-color);
 }
 
-
-
-
-
 .container {
     width: 100vw;
-    height: 100vh;
-    
-    overflow: hidden;
+    height: 100vh;  
 }
 
 .content {
@@ -121,6 +115,7 @@
     padding: 1rem;
     gap: 1rem;
     background-color: var(--white-color);
+   
 }
 
 .header-btns {
@@ -141,33 +136,7 @@
     
 }
 
-.es-list {
-    background-color: var(--white-color);
-    border-radius: 30px;
-    padding: 1rem;
-    width: 300px;
-    height: 100%;
-    gap: 1rem;
-}
 
-.es-table{
-    gap: 1rem;
-    width: 95%;
-}
-
-.row {
-    width: 100%;
-    padding: 0.5rem;
-    gap: 1rem;
-}
-
-.column {
-    display: flex;
-    align-items: center;
-    gap: 0.5rem;
-    font-size: 0.8rem;
-    flex: auto;
-}
 
 .product-name {
     width: 150px;
@@ -194,6 +163,7 @@
 section {
     gap: 0.5rem;
     height: 80%;
+
 }
 
 .produtos-list {
@@ -203,9 +173,10 @@ section {
     gap: 1rem;
     flex: auto;
     height: 100%;
+    box-shadow: 10px 10px 10px #ccc;
 }
 
-.header-list button {
+.header-list .acoes button {
     min-width: 100px;
     padding: 0.5rem;
     background-color: var(--main-color);
@@ -217,89 +188,172 @@ section {
 }
 
 .produtos-list .header-list {
-    justify-content: flex-end;
+    justify-content: space-between;
     gap: 1rem;
+    padding: 0rem 1rem;
 }
 
-.produtos-table{
-    max-width: 100%;
-    width: 95%;
-    height: 80%;
-    padding: 1rem;
-    overflow-y: hidden;
-    overflow-x: hidden;
-    transition: all 0.5s ease-out;
-    font-size: 0.9rem;
-}
-
-.produtos-table:hover{
-    overflow-y: auto;
-}
-.produtos-table::-webkit-scrollbar{
-    width: 5px;
-}
-
-.produtos-table::-webkit-scrollbar-thumb {
-    background: var(--main-color);
-    border-radius: 10px;
-}
-
-.produtos-table .head{
-    border-radius: 30px;
-    font-weight: 600;
-    color: var(--dark-gray);
-}
-
-.produtos-table td{
-    height: 30px;
-    border-bottom: 1px solid #ececec;
-    width: 90%;
-    display: flex;
-    align-items: center;
-    padding: 0.2rem 0.2rem;
-    gap: 0.2rem;
-}
-
-.produtos-table tr{
-    display: flex;
-}
-.produtos-table .row{
-    width: 100%;
+.acoes{
     gap: 0.5rem;
 }
 
-.produtos-table .column{
-    width: 20%;
+.produtos-table{
+    width: 98%;
+    height: 80%;
+    padding: 0.5rem;
+    overflow-y: auto;
+    overflow-x: hidden;
+    transition: all 0.5s ease-out;
+    font-size: 0.8rem;
+    gap: 0.5rem;
+}
+
+
+
+.text-agroup{
     display: flex;
-}
-.produtos-table .cod{
-    width: 5%;
+    flex-direction: column;
+    gap: 0.5rem;
+
 }
 
-.produtos-table .name{
-    min-width: 25%;
+
+
+.produto-card{
+    padding: 0.3rem;
+    border: 1px solid var(--main-color);
+    border-radius: 10px ;
+    display: flex;
+    align-items: center;
+    justify-content: space-between
+}
+.produto-card .info{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 0.5rem;
+}
+.produto-card .produto-id{
+    font-weight: bold;
 }
 
-.produtos-table .estoque{
-    width: 10%;
+.produto-card .tags{
+    display: flex;
+    align-items: center
+    ;
+    gap: 1rem;
 }
 
-.produtos-table .secao{
-    width: 5%;
-}
-
-.produtos-table button{
-    background-color: var(--main-color);
-    border: 0;
-    padding: 0.2rem;
-    color: var(--white-color);
+.produto-card .tag-card{
+    padding: 0.5rem;
     border-radius: 10px;
+    background-color: #ececec;
+
+}
+
+.produto-card-buttons button{
+    padding: 0.5rem;
     width: 30px;
     height: 30px;
-    cursor: pointer;
+    border: 0;
+    display: flex;
+    align-items: center;
+    background-color: var(--main-color);
+    color: var(--white-color);
+    border-radius: 6px;
+}
+
+.produto-card-buttons{
+    height: 100%;
+    display: flex;
+
+    border-radius: 30px;
+    gap: 0.5rem;
+   
+}
+
+.produto-card .produto-nome{
+    color: var(--gray-color);
 }
 
 .delete{
     background-color: var(--red-color) !important;
 }
 
+.paginacao{
+    gap: 1rem;
+}
+
+.paginacao .parse-btns{
+    display: flex;
+    font-size: 0.8rem;
+}
+
+.parse-btns button{
+    padding: 0.2rem;
+    border-radius: 6px;
+    width: 30px;
+    height: 30px;
+    border: 0;
+    color: var(--white-color);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--main-color);
+}
+
+.atual-pag{
+    padding: 0.2rem;
+    border-radius: 6px;
+    width: 30px;
+    height: 30px;
+    border: 0;
+    color: var(--main-color);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.total{
+    font-size: 0.8rem;
+    color: var(--gray-color);
+}
+
+
+.onCatalogo{
+    gap: 0.5rem;
+    display: flex;
+    align-items: center;
+}
+
+.checkbox{
+    width: 50px;
+    height: 25px;
+    background-color: var(--dark-gray);
+    border-radius: 30px;
+    padding: 0.1rem;
+    display: flex;
+    align-items: center;
+    position: relative;
+    cursor: pointer;
+    transition: all 0.5s ease-in-out;
+    z-index: 1;
+}
+.checkbox .check{
+    transform: translateX(30px);
+}
+.purple{
+    background-color: var(--main-color);
+}
+
+.checkbox span{
+    width: 15px;
+    height: 15px;
+    background-color: var(--white-color);
+    color: #fff;
+    border-radius: 50%;
+    position: absolute;
+    transition: all 0.5s ease-in-out;
+    text-align: center;
+    transform: translateX(5px);
+}
