--- a/src/views/login.css
+++ b/src/views/login.css
@@ -76,7 +76,6 @@
     padding: 10px;
     font-family: 'Poppins';
     background: rgb(136,86,246);
-    background: linear-gradient(90deg, rgba(136,86,246,1) 0%, rgba(52,0,166,1) 50%);
     border-radius: 30px;
     border: 0;
     color: #fff;
@@ -98,18 +97,19 @@
 
 .input-agroupt{
    border-radius: 30px;
-   padding: 10px;
    width: 250px;
    border: 1px solid var(--main-color);
+    display: flex;
+    gap: 0.5rem;
+    align-items: center;
+    padding: 0.8rem;
 }
 
+.input-agroupt i{
+    color: var(--main-color);
+ }
 
-.input-agroupt svg{
-    position: absolute;
-    fill: var(--main-color);
-}
 .input-agroupt input{
-    margin-left: 30px;
     border: 0;
     background: none;
     outline: 0;
@@ -182,30 +182,29 @@
 
 .background-circle1{
     position: absolute;
-    height: 250px;
-    width: 250px;
+    height: 10rem;
+    width: 10rem;
     bottom: 0;
     text-align: center;
     background-color: var(--main-color);
     border-radius: 50%;
-    top: -50px;
-    left: -50px;
+    top: -4rem;
+    left: -4rem;
     z-index: 1;
 }
 
 .background-circle2{
     position: absolute;
-    height: 200px;
-    width: 200px;
+    height: 10rem;
+    width: 10rem;
     bottom: 0;
     text-align: center;
     background-color: var(--main-color);
     border-radius: 50%;
-    bottom: -50px;
-    right: -50px;
+    bottom: -4rem;
+    right: -4rem;
     z-index: 1;
 }
-
 
 
 
@@ -256,12 +255,6 @@
   }
 
   @media screen and (max-width: 555px){
-    .background-circle1{
-       width: 200px;
-       height: 200px;
-       top: -100px;
-       left: -100px;
-    }
 
     .login-right img{
       
