--- a/src/views/register.css
+++ b/src/views/register.css
@@ -14,6 +14,10 @@
     margin: 0;
 }
 
+.message{
+    font-size: 0.8rem;
+    color: #f22e6c;
+}
 .container{
     display: flex;
     align-items: center;
@@ -72,7 +76,7 @@
     padding: 10px;
     font-family: 'Poppins';
     background: rgb(136,86,246);
-    background: linear-gradient(90deg, rgba(136,86,246,1) 0%, rgba(52,0,166,1) 50%);
+   
     border-radius: 10px;
     border: 0;
     color: #fff;
@@ -100,9 +104,9 @@
 }
 
 
-.input-agroupt svg{
+.input-agroupt i{
     position: absolute;
-    fill: var(--main-color);
+    font-size: 1.5rem;
 }
 .input-agroupt input{
     margin-left: 30px;
@@ -165,27 +169,27 @@
 
 .background-circle1{
     position: absolute;
-    height: 250px;
-    width: 250px;
+    height: 10rem;
+    width: 10rem;
     bottom: 0;
     text-align: center;
     background-color: var(--main-color);
     border-radius: 50%;
-    top: -50px;
-    right: -50px;
+    top: -4rem;
+    right: -4rem;
     z-index: 1;
 }
 
 .background-circle2{
     position: absolute;
-    height: 200px;
-    width: 200px;
+    height: 10rem;
+    width: 10rem;
     bottom: 0;
     text-align: center;
     background-color: var(--main-color);
     border-radius: 50%;
-    bottom: -50px;
-    left: -50px;
+    bottom: -1rem;
+    left: -1rem;
     z-index: 1;
 }
 
@@ -235,12 +239,7 @@
   }
 
   @media screen and (max-width: 555px){
-    .background-circle1{
-       width: 200px;
-       height: 200px;
-       top: -100px;
-       right: -100px;
-    }
+
 
     .login-right img{
       
