refactor: atualização de responsividade do painel de produtos

--- a/src/views/painel-produtos.css
+++ b/src/views/painel-produtos.css
@@ -357,3 +357,23 @@ section {
     text-align: center;
     transform: translateX(5px);
 }
+
+@media screen and (max-width: 875px){
+   .header-list{
+    flex-direction: column-reverse !important;
+    align-items: flex-end !important;
+   }
+   .produto-card{
+    flex-wrap: wrap;
+    gap: 0.5rem;
+   }
+   .header-btns{
+    flex-wrap: wrap;
+    gap: 1rem;
+   }
+
+   .acoes{
+    flex-wrap: wrap;
+   }
+}
+
