--- a/src/views/cliente-home.css
+++ b/src/views/cliente-home.css
@@ -12,26 +12,6 @@
     --red-color: #fc0352;
 }
 
-.close-btn {
-    width: 30px;
-    height: 30px;
-    position: absolute;
-    top: 0.5rem;
-    right: 0.5rem;
-    color: var(--red-color);
-    border: 1px solid var(--red-color);
-    background: none;
-    font-size: 1rem;
-    border-radius: 10px;
-    transition: all 0.5s ease-out;
-    cursor: pointer;
-}
-
-.close-btn:hover {
-    background: var(--red-color);
-    color: var(--white-color);
-}
-
 * {
     padding: 0;
     margin: 0;
@@ -44,14 +24,14 @@
     width: 100px;
     text-align: center;
     color: #fff;
+    font-size: 0.8rem;
 }
 
 .container {
-    height: 100vh;
+    height: 100%;
     display: flex;
     align-items: center;
     flex-direction: column;
-    font-family: 'Poppins';
     gap: 1rem;
 }
 
@@ -73,6 +53,11 @@
     height: 40px;
     border-radius: 50%;
     overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+    font-weight: bold;
 }
 
 .topbar .user-perfil img {
@@ -149,7 +134,6 @@
     display: flex;
     align-items:center;
     justify-content: space-between;
-    
 }
 
 .product-list::-webkit-scrollbar {
@@ -172,6 +156,7 @@
     justify-content: center;
     position: relative;
     transition: transform 0.5s ease-in;
+    min-width: 250px;
 }
 
 .categoria-card {
@@ -182,7 +167,6 @@
     transition: all 0.5s ease-out;
     cursor: pointer;
     font-size: 0.9rem;
-
 }
 
 .categoria-card:hover {
@@ -193,10 +177,8 @@
 .product-card .product-img {
     width: 100px;
     height: 100px;
-    border-radius: 50%;
     display: flex;
     flex-direction: column;
-
 }
 
 .product-card .card-text {
@@ -208,17 +190,30 @@
     border: 1px solid rgba(255, 255, 255, 0.18);
     display: flex;
     flex-direction: column;
-    gap: 0.2rem;
+    gap: 0.5rem;
     color: var(--dark-color);
+    justify-content: center;
     align-items: center;
-    width: 150px;
     border-radius: 10px;
     padding: 10px 0px;
-    font: 0.8rem;
+    width: 90%;
+
+    cursor: pointer;
 }
 
 .card-text .nome {
     font-weight: bold;
+    font-size: 0.8rem;
+    padding: 0.5rem;
+    text-align: center;
+}
+
+.card-text .categoria{
+    font-size: 0.8rem;
+    background: #e0e0e0;
+    padding: 0.2rem 0.5rem;
+    border-radius:6px ;
+
 }
 
 .product-img img {
@@ -271,22 +266,28 @@
 }
 
 .action-button button {
-    background-color: #ccc;
+    background-color: #e0e0e0;
     border: 0;
     width: 30px;
     height: 30px;
     border-radius: 50%;
     cursor: pointer;
     transition: all 0.5s ease-out;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.action-button button i{
+ color: #ffffff;
+ 
 }
 
 .action-button button:hover {
     background-color: #fc0352;
 }
 
-.action-button button svg {
-    fill: var(--white-color);
-}
+
 
 .notificacao-modal {
     width: 400px;
@@ -316,10 +317,10 @@
     color: #fff;
     display: flex;
     gap: 0.5rem;
-    height: 40px;
+    min-height: 40px;
 }
 
-.notificacao-text {
+.notificacao-text p{
     font-size: 0.8rem;
 }
 
@@ -334,6 +335,47 @@
     justify-content: center;
 }
 
+.acessar{
+    text-decoration: none;
+    background-color: var(--main-color);
+    padding: 0.5rem;
+    border-radius: 6px;
+    color: #fff;
+    font-size: 0.8rem;
+    transition: all 0.5 ease-out;
+    display: flex;
+    align-items: center;
+}
+
+.acessar i {
+    color: #fff; 
+}
+.acessar:hover{
+    background-color: var(--sub-color);
+    padding: 0.5rem;
+}
+
+.logout{
+    background-color: var(--red-color);
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 40px;
+    height: 40px;
+    color: #fff;
+    text-decoration: none;
+}
+
+.logout i{
+    color: #fff;
+}
+
+.username{
+    color: var(--dark-gray);
+    font-size: 0.9rem;
+    font-family: 'Poppins';
+}
 
 @media screen and (max-width: 1100px){
 
@@ -364,7 +406,7 @@
 @media screen and (max-width: 650px){
     .container{
        width: 100%;
-       margin-bottom: 300px;
+       margin-bottom: 8rem;
     }
 
     .section{
