backend: registro de pedidos, exibição e filtro

--- a/src/views/cliente-home.css
+++ b/src/views/cliente-home.css
@@ -10,6 +10,8 @@
     --white-color: #ffffff;
     --gray-color: #878787;
     --red-color: #fc0352;
+    --dark-gray: #454545;
+    --min-gray: #bbbbbb;
 }
 
 * {
