--- a/src/views/profile.css
+++ b/src/views/profile.css
@@ -2,122 +2,122 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
 :root {
-    --main-color: #8856f6;
-    --sub-color: #7234fa;
-    --sec-color: #2a1067;
-    --subsec-color: #210a58;
-    --dark-color: #040824;
-    --white-color: #ffffff;
-    --gray-color: #878787;
-    --red-color: #fc0352;
+  --main-color: #8856f6;
+  --sub-color: #7234fa;
+  --sec-color: #2a1067;
+  --subsec-color: #210a58;
+  --dark-color: #040824;
+  --white-color: #ffffff;
+  --gray-color: #878787;
+  --red-color: #fc0352;
 }
 
 .close-btn {
-    width: 30px;
-    height: 30px;
-    position: absolute;
-    top: 0.5rem;
-    right: 0.5rem;
-    color: var(--red-color);
-    border: 1px solid var(--red-color);
-    background: none;
-    font-size: 1rem;
-    border-radius: 10px;
-    transition: all 0.5s ease-out;
-    cursor: pointer;
+  width: 30px;
+  height: 30px;
+  position: absolute;
+  top: 0.5rem;
+  right: 0.5rem;
+  color: var(--red-color);
+  border: 1px solid var(--red-color);
+  background: none;
+  font-size: 1rem;
+  border-radius: 10px;
+  transition: all 0.5s ease-out;
+  cursor: pointer;
 }
 
 .close-btn:hover {
-    background: var(--red-color);
-    color: var(--white-color);
+  background: var(--red-color);
+  color: var(--white-color);
 }
 
 * {
-    padding: 0;
-    margin: 0;
+  padding: 0;
+  margin: 0;
 }
 
 .preco {
-    background-color: var(--sub-color);
-    padding: 0.2rem;
-    border-radius: 6px;
-    width: 100px;
-    text-align: center;
-    color: #fff;
+  background-color: var(--sub-color);
+  padding: 0.2rem;
+  border-radius: 6px;
+  width: 100px;
+  text-align: center;
+  color: #fff;
 }
 
 .container {
-    height: 100%;
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    font-family: 'Poppins';
-    gap: 1rem;
-    padding-bottom: 5rem;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  font-family: 'Poppins';
+  gap: 1rem;
+  padding-bottom: 5rem;
 }
 
 
 .topbar {
-    height: 60px;
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    padding: 1rem 1rem;
-    gap: 1rem;
-    width: 95%;
-    background-color: var(--white-color);
+  height: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  padding: 1rem 1rem;
+  gap: 1rem;
+  width: 95%;
+  background-color: var(--white-color);
 }
 
 .topbar .user-perfil {
-    background: var(--main-color);
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    overflow: hidden;
+  background: var(--main-color);
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  overflow: hidden;
 }
 
 .topbar .user-perfil img {
-    width: 100%;
+  width: 100%;
 }
 
 .topbar .notificacao {
-    background: var(--main-color);
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: relative;
+  background: var(--main-color);
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
 }
 
 .notificacao svg {
-    fill: #ffffff;
+  fill: #ffffff;
 }
 
-.perfil h2{
-    color: var(--sec-color);
-    font-size: 1.8rem;
+.perfil h2 {
+  color: var(--sec-color);
+  font-size: 1.8rem;
 }
 
-.container-perfil .user-perfil{
-    display: flex;
-    border-radius: 50rem;
-    width: 8rem;
-    height: 8rem;
-    position: absolute;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 4rem;
-    background-color: var(--main-color);
-    color: var(--white-color);
-    top: -4rem;
-    left: 2rem;
+.container-perfil .user-perfil {
+  display: flex;
+  border-radius: 50rem;
+  width: 8rem;
+  height: 8rem;
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 4rem;
+  background-color: var(--main-color);
+  color: var(--white-color);
+  top: -4rem;
+  left: 2rem;
 }
 
 
-.container-geral-perfil{
+.container-geral-perfil {
   background-color: none;
   width: 50%;
   display: flex;
@@ -125,7 +125,7 @@
   max-height: 100%;
 }
 
-.container-perfil{
+.container-perfil {
   padding-top: 5rem;
   border: 2px solid var(--main-color);
   border-radius: 1.5rem;
@@ -136,7 +136,7 @@
   justify-content: center;
 }
 
-.perfil-info{
+.perfil-info {
   display: flex;
   padding: 0.5rem;
   align-items: center;
@@ -144,22 +144,22 @@
   font-size: 0.9rem;
 }
 
-.nome_completo{
+.nome_completo {
   font-weight: bold;
 }
 
-.perfil-info i{
- color: var(--main-color);
+.perfil-info i {
+  color: var(--main-color);
 }
 
 
-.edit-perfil{
+.edit-perfil {
   padding: 1rem;
   display: flex;
   gap: 1rem;
 }
 
-.edit-perfil button{
+.edit-perfil button {
   cursor: pointer;
   display: flex;
   gap: 0.5rem;
@@ -173,15 +173,17 @@
 }
 
 
-.endereco-user{
+.endereco-user {
   background-color: rgb(255, 255, 255);
-  width: 50%;
+  width: 60%;
   height: 10rem;
   display: flex;
   align-items: center;
   gap: 1rem;
+  flex-wrap: wrap;
 }
-.add-endereco{
+
+.add-endereco {
   border-radius: 30px;
   border: 2px dashed var(--main-color);
   padding: 1rem;
@@ -191,20 +193,54 @@
   align-items: center;
   justify-content: center;
   min-width: 250px;
+  color: var(--main-color);
+  font-weight: bold;
+  font-size: 0.9rem;
+  cursor: pointer;
 }
-.endereco-card{
+
+.endereco-card {
   border: 1px solid var(--main-color);
   border-radius: 30px;
   height: 100%;
   padding: 1rem;
   min-width: 250px;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
 }
 
-.endereco-card p{
+.endereco-card .btn {
+  display: flex;
+  gap: 0.5rem;
+}
+
+.btn button {
+  padding: 0.3rem 0.5rem;
+  border: 0;
+  border-radius: 6px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5rem;
+}
+
+.delete {
+  background-color: var(--red-color);
+  color: var(--white-color);
+}
+
+.endereco-card p {
   font-size: 0.8rem;
+  width: 90%;
+  word-break: break-all;
 }
 
-.ender{
+.endereco-nome{
+  font-weight: bold;
+}
+
+.ender {
   display: flex;
   font-size: 1.5rem;
   margin-top: 0rem;
@@ -213,15 +249,12 @@
   color: var(--dark-color);
 }
 
-.container{
+.container {
   display: flex;
   align-items: center;
 }
 
-
-
-
-.acessar{
+.acessar {
   text-decoration: none;
   background-color: var(--main-color);
   padding: 0.5rem;
@@ -234,14 +267,15 @@
 }
 
 .acessar i {
-  color: #fff; 
+  color: #fff;
 }
-.acessar:hover{
+
+.acessar:hover {
   background-color: var(--sub-color);
   padding: 0.5rem;
 }
 
-.logout{
+.logout {
   background-color: var(--red-color);
   border-radius: 50%;
   display: flex;
@@ -253,11 +287,11 @@
   text-decoration: none;
 }
 
-.logout i{
+.logout i {
   color: #fff;
 }
 
-.username{
+.username {
   color: var(--dark-gray);
   font-size: 0.9rem;
   font-family: 'Poppins';
@@ -278,21 +312,21 @@
 
 
 @media (max-width: 768px) {
-  .container-geral-perfil{
-      display: flex;
-      width: 100%;
-      margin-left: 0;
-      margin-right: 0;
-      align-items: center;
-      flex-direction: column;
+  .container-geral-perfil {
+    display: flex;
+    width: 100%;
+    margin-left: 0;
+    margin-right: 0;
+    align-items: center;
+    flex-direction: column;
   }
 
-  .container-perfil{
+  .container-perfil {
     background-color: var(--main-color);
     color: var(--white-color);
   }
 
-  .title-perfil h1{
+  .title-perfil h1 {
     color: white;
     font-size: 1.2rem;
   }
@@ -301,66 +335,66 @@
     display: none;
   }
 
-  .edit-perfil a{
+  .edit-perfil a {
     margin-left: 2rem;
     margin-right: 2rem;
     padding-left: 1.3rem;
     padding-right: 1.3rem;
   }
 
-  .bottons{
+  .bottons {
     background-color: none;
     display: flex;
-    justify-content:space-around;
+    justify-content: space-around;
   }
 
-  .endereco-user{
-      display: flex;
-      padding-left: rem;
-      width: 100%;
-      margin-left: 0;
-      margin-right: 0;
-      align-items: center;
-      flex-direction: column;
+  .endereco-user {
+    display: flex;
+    padding-left: rem;
+    width: 100%;
+    margin-left: 0;
+    margin-right: 0;
+    align-items: center;
+    flex-direction: column;
   }
 
-  .two{
+  .two {
     width: 90%;
     margin-top: 1rem;
     margin-bottom: 1rem;
     padding-bottom: 1rem;
   }
 
-  .one{
+  .one {
     width: 90%;
     margin-top: 0rem;
     margin-bottom: 1rem;
   }
 
-  .tree{
+  .tree {
     width: 90%;
     margin-top: 1rem;
     padding-bottom: 1rem;
   }
 
-  .info-perfil-senha input{
+  .info-perfil-senha input {
     background-color: var(--main-color);
     color: var(--white-color);
   }
- 
-  .user-perfil a i:hover{
+
+  .user-perfil a i:hover {
     color: var(--white-color);
   }
 
-  .perfil-edit a i{
+  .perfil-edit a i {
     color: var(--main-color);
   }
 
-  .perfil-edit a i:hover{
+  .perfil-edit a i:hover {
     color: var(--white-color);
   }
 
-  .container{
+  .container {
     margin-bottom: 28rem;
   }
 
