--- a/src/views/painel-pedido.css
+++ b/src/views/painel-pedido.css
@@ -17,10 +17,10 @@
     --gray-color: #878787;
     --red-color: #fc0352;
     --dark-gray: #454545;
-    
+    --min-gray: #bbbbbb;
 }
 
-.container{
+.container {
     width: 100vw;
     height: 100vh;
     font-family: 'Poppins';
@@ -28,103 +28,165 @@
     overflow: hidden;
 }
 
-.content{
-    padding: 1rem;
-    height: 95%;
-    width: 60%;
-    gap: 2rem;
-}
 
-
-.pedido-card .infos{
-    display: flex;
-    gap: 0.2rem;
-    align-items: center;
-}
-
-.card-column{
-    width: 30%;
-    gap: 0.5rem;
-    color: var(--gray-color);
-
-}
-
-.infos i{
-    color: var(--main-color);
-}
-
-.pedidos{
-    border-radius: 30px;
-    padding: 1rem;
-    gap: 1rem;
-
-}
-
-.content{
+.content {
     width: 80%;
-    max-height: 95%;
+    height: 95%;
+    margin-left: 1rem;
 }
 
-.pedidos .title{
-    color: var(--main-color);
-    font-weight: bold;
+.pedido-container {
+    width: 95%;
+    padding: 1rem;
+    border-radius: 30px;
+    background-color: var(--white-color);
+    max-height: 100%;
+    overflow: hidden;
 }
 
-.action button{
-    background-color: var(--main-color);
+.pedido-container .actions {
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+    justify-content: flex-end;
+    padding: 1rem;
+    padding-bottom: 0.2rem;
+}
+
+.actions button {
     width: 100px;
     height: 30px;
-    color: var(--white-color);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 30px;
     border: 0;
-    border-radius: 30px;
-}
-.pedido-table{
-    width: 100%;
-    border-radius: 30px;
+    background-color: var(--main-color);
+    color: #fff;
 }
 
-.row{
-    width: 95%;
-    min-height: 40px;
-    gap: 0.1rem;
-    padding: 0.1rem;
+.pedido-container .status-action {
+    padding: 1rem;
+    display: flex;
+    gap: 0.5rem;
+    align-items: center;
+    justify-content: flex-end;
+
 }
 
-.column{
-    padding-top: 0.5rem;
-    padding-bottom: 0.5rem;
-    width: 15%;
+.pedido-container .status-action label {
     font-size: 0.8rem;
-    padding-left: 1%;
-    padding-right: 1%;
+    border: 1px solid var(--main-color);
+    padding: 0.5rem;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+.status-action input[type="radio"]{
+    display: none;
+}
+.status-action .active {
+    background-color: var(--main-color);
+    color: var(--white-color);
+}
+
+#pedido-busca {
+    padding: 0 1rem;
+    height: 30px;
+    border-radius: 30px;
+    border: 1px solid var(--main-color);
+    outline: 0;
+}
+
+.pedido-list {
+    display: flex;
+    flex-direction: column;
+    gap: 0.3rem;
+    height: 80%;
+    padding-bottom: 2rem;
+    overflow: auto;
+}
+
+.pedido-list::-webkit-scrollbar {
+    width: 3px;
+}
+
+.pedido-list::-webkit-scrollbar-thumb {
+    border-radius: 20px;
+    border: 3px solid #efefef;
+    /* creates padding around scroll thumb */
+}
+
+.pedido-tags {
+    display: flex;
+    gap: 0.5rem;
+}
+
+.pedido-tags p {
+    background-color: #ededed;
+    border-radius: 6px;
+    padding: 0.2rem 0.5rem;
+
+}
+
+.pedido-card {
+    padding: 0.5rem;
+    font-size: 0.8rem;
+    display: flex;
+    justify-content: space-between;
+    border: 1px solid var(--main-color);
+    border-radius: 10px;
+    width: 98%;
+}
+
+.pedido-info {
+    display: flex;
+    flex-direction: column;
     gap: 0.2rem;
 }
 
-.pedido-table .name{
-    width: 20%;
-}
-.pedido-table .id{ width: 10%;}
-
-.column img{
-    width: 20px;
-    height: 20px;
-    border-radius: 50%;
+.pedido-card .pedido-info p {
+    display: flex;
+    align-items: center;
+    gap: 0.2rem;
+    color: var(--dark-gray);
 }
 
-.head{
-    font-weight: bold;
-    background-color: var(--main-color);
-    border-radius: 20px 20px 0px 0px ;
-    color: var(--white-color) !important;
+.pedido-card .pedido-info p i {
+    color: var(--main-color);
 }
 
-.column button{
-    background-color: var(--red-color);
-    border: 0;
-    padding: 0.2rem;
-    color: var(--white-color);
-    border-radius: 10px;
-    width: 30px;
+
+.pedido-card .pedido-action {
+    display: flex;
+    gap: 0.3rem
+}
+
+.pedido-action button {
     height: 30px;
-    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0.3rem 0.5rem;
+    gap: 0.2rem;
+    border: 0;
+    border-radius: 6px;
+    background-color: var(--main-color);
+    color: var(--white-color);
+}
+
+/*.pedido-action button i {
+    padding: 0.2rem;
+    background-color: var(--white-color);
+    border-radius: 50%;
+    color: var(--main-color);
+}
+
+*/
+.pedido-action .cancelar {
+    background-color: var(--red-color);
+}
+
+.pedido-id {
+    font-weight: bold;
 }
